--- a/kongregate_shell.html
+++ b/kongregate_shell.html
@@ -18,9 +18,9 @@
 
       function setIFrame(params) {
         //kongregateAPI.embedFrame("index.html?kongregate=1&" + params, 'contentdiv');
-        document.getElementById('iframedesu').src = ("index.html?kongregate=1&" + params);
+        document.getElementById('iframedesu').src = ("index.html?kongregate=1&fixheight=1&" + params);
       }
 
       // Begin the process of loading the Kongregate API:
       kongregateAPI.loadAPI(onLoadCompleted);
-      // If it can't load for some reason, the game should still work</script> <!-- The div that the game will be placed into. Make sure to set the width and height properly --> <!--div id="contentdiv" style="top:0px; left:0px; width:800px; height:600px; borders:none;"--> <!-- You can manually put your game iframe in here instead of calling embedFrame above if you wish --> <!--/div--> <iframe id="iframedesu" src="index.html?kongregate=1" style="border: none; margin:0; padding:0;width:100%;height:100%;min-height:600px"></iframe>  
+      // If it can't load for some reason, the game should still work</script> <!-- The div that the game will be placed into. Make sure to set the width and height properly --> <!--div id="contentdiv" style="top:0px; left:0px; width:800px; height:600px; borders:none;"--> <!-- You can manually put your game iframe in here instead of calling embedFrame above if you wish --> <!--/div--> <iframe id="iframedesu" src="index.html?kongregate=1&fixheight=1" style="border: none; margin:0; padding:0;width:100%;height:100%;min-height:768px"></iframe>  
